[gd_scene load_steps=14 format=2]

[ext_resource path="res://misc/static_gif.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/portraits/rato.png" type="Texture" id=3]
[ext_resource path="res://assets/portraits/pombo.png" type="Texture" id=4]
[ext_resource path="res://assets/portraits/aluraman.png" type="Texture" id=5]
[ext_resource path="res://assets/misc/arrow.png" type="Texture" id=6]
[ext_resource path="res://scripts/custom_night_menu.gd" type="Script" id=7]
[ext_resource path="res://assets/misc/continuar.webp" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/arrow.png-e10df054c0d700e81b9fb5affc188f55.stex"

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/arrow.png-e10df054c0d700e81b9fb5affc188f55.stex"

[node name="custom_night_menu" type="Node2D"]
script = ExtResource( 7 )

[node name="color" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )

[node name="static_gif" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.0156863 )
position = Vector2( 479, 269 )

[node name="customize_text" type="RichTextLabel" parent="."]
margin_left = 225.0
margin_top = 125.0
margin_right = 849.0
margin_bottom = 202.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = SubResource( 1 )
text = "CUSTOMIZAR NOITE"

[node name="Pombo" type="Sprite" parent="."]
position = Vector2( 230, 280 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="diff_text" type="RichTextLabel" parent="Pombo"]
margin_left = -105.0
margin_top = 110.0
margin_right = 108.0
margin_bottom = 143.0
custom_fonts/normal_font = SubResource( 2 )
text = "DIFICULDADE"

[node name="name_text" type="RichTextLabel" parent="Pombo"]
margin_left = -50.0
margin_top = -135.0
margin_right = 49.0
margin_bottom = -102.0
custom_fonts/normal_font = SubResource( 2 )
text = "POMBO"

[node name="Aluraman" type="Sprite" parent="."]
position = Vector2( 470, 280 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="diff_text" type="RichTextLabel" parent="Aluraman"]
margin_left = -105.0
margin_top = 110.0
margin_right = 108.0
margin_bottom = 143.0
custom_fonts/normal_font = SubResource( 2 )
text = "DIFICULDADE"

[node name="name_text" type="RichTextLabel" parent="Aluraman"]
margin_left = -80.0
margin_top = -135.0
margin_right = 80.0
margin_bottom = -102.0
custom_fonts/normal_font = SubResource( 2 )
text = "ALURAMAN"

[node name="Rato" type="Sprite" parent="."]
position = Vector2( 710, 280 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="diff_text" type="RichTextLabel" parent="Rato"]
margin_left = -105.0
margin_top = 110.0
margin_right = 108.0
margin_bottom = 143.0
custom_fonts/normal_font = SubResource( 2 )
text = "DIFICULDADE"

[node name="name_text" type="RichTextLabel" parent="Rato"]
margin_left = -45.0
margin_top = -135.0
margin_right = 54.0
margin_bottom = -102.0
custom_fonts/normal_font = SubResource( 2 )
text = "RATO"

[node name="pombo_diff" type="Node2D" parent="."]

[node name="text" type="RichTextLabel" parent="pombo_diff"]
margin_left = 211.0
margin_top = 385.0
margin_right = 254.0
margin_bottom = 420.0
custom_fonts/normal_font = SubResource( 3 )
text = "20"

[node name="less_btn" type="Button" parent="pombo_diff"]
margin_left = 203.0
margin_top = 377.0
margin_right = 279.0
margin_bottom = 447.0
rect_rotation = 90.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="more_btn" type="Button" parent="pombo_diff"]
margin_left = 255.0
margin_top = 428.0
margin_right = 331.0
margin_bottom = 498.0
rect_rotation = 270.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="aluraman_diff" type="Node2D" parent="."]
position = Vector2( 240, 0 )

[node name="text" type="RichTextLabel" parent="aluraman_diff"]
margin_left = 211.0
margin_top = 385.0
margin_right = 254.0
margin_bottom = 420.0
custom_fonts/normal_font = SubResource( 3 )
text = "20"

[node name="less_btn" type="Button" parent="aluraman_diff"]
margin_left = 203.0
margin_top = 377.0
margin_right = 279.0
margin_bottom = 447.0
rect_rotation = 90.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = SubResource( 4 )
flat = true

[node name="more_btn" type="Button" parent="aluraman_diff"]
margin_left = 255.0
margin_top = 428.0
margin_right = 331.0
margin_bottom = 498.0
rect_rotation = 270.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = SubResource( 5 )
flat = true

[node name="rato_diff" type="Node2D" parent="."]
position = Vector2( 480, 0 )

[node name="text" type="RichTextLabel" parent="rato_diff"]
margin_left = 211.0
margin_top = 385.0
margin_right = 254.0
margin_bottom = 420.0
custom_fonts/normal_font = SubResource( 3 )
text = "20"

[node name="less_btn" type="Button" parent="rato_diff"]
margin_left = 203.0
margin_top = 377.0
margin_right = 279.0
margin_bottom = 447.0
rect_rotation = 90.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="more_btn" type="Button" parent="rato_diff"]
margin_left = 255.0
margin_top = 428.0
margin_right = 331.0
margin_bottom = 498.0
rect_rotation = 270.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="continue" type="Button" parent="."]
margin_left = 644.0
margin_top = 451.0
margin_right = 992.0
margin_bottom = 534.0
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true

[connection signal="pressed" from="pombo_diff/less_btn" to="." method="_on_less_btn_pressed"]
[connection signal="pressed" from="pombo_diff/more_btn" to="." method="_on_more_btn_pressed"]
[connection signal="pressed" from="aluraman_diff/less_btn" to="." method="_on_less_btn_pressed_aluraman"]
[connection signal="pressed" from="aluraman_diff/more_btn" to="." method="_on_more_btn_pressed_aluraman"]
[connection signal="pressed" from="rato_diff/less_btn" to="." method="_on_less_btn_pressed_rato"]
[connection signal="pressed" from="rato_diff/more_btn" to="." method="_on_more_btn_pressed_rato"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
